--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -3,8 +3,7 @@
     margin-bottom: 76px;
     display: flex;
     justify-content: center;
-}
-
-.btn--index {
-    display: none;
+    div {
+        cursor: pointer;
+    }
 }
