--- a/css/_modenocday.scss
+++ b/css/_modenocday.scss
@@ -23,7 +23,7 @@
                 background: url("../assets/viewmorebtn/ver-mas-hover-noc.svg");
             }
         }
-        #gifobuilder, #misFavor{
+        #gifobuilder, #misFavor, #edifMisGifs{
             >.placeholder {
                 box-shadow: rgba(255, 255, 255, 0.877) 2px 3px 5px;
             }
@@ -164,7 +164,7 @@
                 background: url("../assets/arrow/left/button-slider-left-hover.svg");
             }
         }
-        #gifobuilder, #misFavor{
+        #gifobuilder, #misFavor, #edifMisGifs{
             >.placeholder {
                 box-shadow: rgba(0, 0, 0, 0.25) 2px 3px 5px;
             }
