--- a/css/_creategifs.scss
+++ b/css/_creategifs.scss
@@ -123,8 +123,8 @@ $tablet: "min-width: 768px";
   .recording_video {
     min-width: 80%;
     min-height: 20rem;
-    max-width: 80%;
-    max-height: 20rem;
+    max-width: 100%;
+    max-height: 19rem;
     z-index: 3000;
   }
   .recorded_video {
@@ -189,6 +189,7 @@ $tablet: "min-width: 768px";
     }
   }
   .timer__repeatShot {
+    margin-top: 10rem;
     color: $colorPrimary;
     text-decoration: none;
     &:hover {
