--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -1,12 +1,12 @@
-#gifobuilder, #misFavor{
+#gifobuilder, #misFavor, #edifMisGifs{
     display: grid;
     gap: 10px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: repeat(auto-fill, 1fr);
     width: 90%;
     gap: 0 21px;
     margin-left: 5%;
-    >.placeholder {
+    .placeholder {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
@@ -15,10 +15,6 @@
         border-radius: 5px;
         justify-self: center;
         justify-items: center;
-        .cover {
-            display: none;
-            visibility: hidden;
-        }
         img {
             width: 100%;
             height: 100%;
@@ -34,7 +30,7 @@
     display: flex;
     flex-direction: column;
     padding: 15%;
-
+    margin-top: 30px;
     img {
         width: 50%;
         margin-left: 25%;
@@ -44,16 +40,27 @@
 
 
 @media (min-width: 840px) {
-    #gifobuilder, #misFavor{
+    .empty-search {
+        width: 50%;
+        padding: 0px;
+        margin: 20px 25%;
+    }
+    #gifobuilder, #misFavor, #edifMisGifs{
         display: grid;
         gap: 10px;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 200px;
+        grid-template-rows: 200px repeat(auto-fill, 200px);
         width: 90%;
         margin: 0px;
         margin-left: 5%;
-        gap: 0px 21px;
-        >.placeholder {
+        gap: 10px 21px;
+        img {
+            width: 100%;
+            height: 100%;
+            grid-row-start: 1;
+            grid-column-start: 1;
+        }
+        .placeholder {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
@@ -61,42 +68,40 @@
             height: auto;
             justify-self: center;
             justify-items: center;
-            .cover {
-                display: initial;
-                grid-row-start: 1;
-                grid-column-start: 1;
-                z-index: 2;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-            }
-            .cover--active {
-                background: rgba(87, 46, 229, 0.7) !important;
-            }
             img {
                 width: 100%;
-                height: 100%;
-                z-index: 1;
+                height: 190px;
                 grid-row-start: 1;
                 grid-column-start: 1;
             }
             .btnholder {
                 display: none;
                 width: 100%;
-                height: 45px;
-                z-index: 3;
+                height: 190px;
+                max-height: 200px;
+                margin: 0px;
+                z-index: 10;
+                background: rgba(87, 46, 229, 0.7);
                 justify-content: flex-end;
                 grid-row-start: 1;
                 grid-column-start: 1;
                 .iconholder {
+                    display: inherit;
                     width: 45px;
-                    margin-right: 10px;
+                    margin: 10px 10px;
                     height: 45px;
-                    z-index: 2;
+                    z-index: 4;
+                    img {
+                        width: 40px;
+                    }
+                }
+                h4 {
+                    justify-self: flex-end;
+                    align-self: flex-end;
+                    padding-bottom: 20px;
+                    padding-left: 10px;
                 }
             }
         }
-
     }
-
 }
