--- a/css/_trending.scss
+++ b/css/_trending.scss
@@ -43,7 +43,7 @@
     .gallery {
         flex-direction: row;
         align-self: center;
-        width: 100%;
+        width: 90%;
         height: 180px;
         margin-bottom: 82px;
         margin-top: 32px;
@@ -51,17 +51,75 @@
             display: none;
         }
         #gifs {
-            width: auto;
-            height: 100%;
+            display: flex;
+            width: 100%;
+            height: auto;
             overflow-x: scroll;
-            img {
-                margin: 0rem 0.5rem;
-            }
         }
     }
 }
 
-@media (min-width: 540px) {
+.trendholder {
+    height: 165px;
+    display: grid;
+    grid-template-columns: 275px;
+    grid-template-rows: auto;
+    margin: 0px 20px;
+    img {
+        grid-column-start: 1;
+        grid-row-start: 1;
+        margin: 0px;
+        padding: 0px;
+        width: 100%;
+        height: inherit;
+    }
+}
+
+@media (min-width: 940px) {
+    .trendholder {
+        width: 100%;
+        height: 275px;
+        display: grid;
+        grid-template-columns: 275px;
+        grid-template-rows: auto;
+        margin: 0px 10px;
+        >.btnholder {
+            grid-column-start: 1;
+            grid-row-start: 1;
+            z-index: 5;
+            display: flex;
+            justify-content: flex-end;
+            background: rgba(87, 46, 229, 0.7);
+            margin: 0px;
+            padding-top: 10px;
+            padding-right: 10px;
+            .iconholder {
+                width: 15%;
+                align-self: flex-start;
+                justify-self: flex-end;
+                margin: 0px 5px;
+                img {
+                    width: 45px;
+                }
+            }
+            h4 {
+                justify-self: flex-end;
+                align-self: flex-end;
+                color: white;
+                padding-bottom: 20px;
+                padding-left: 10px;
+                font-size: 14px;
+            }
+        }
+        img {
+            grid-column-start: 1;
+            grid-row-start: 1;
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+            height: inherit;
+        }
+    }
     .trending {
         div {
             margin-top: 70px;
@@ -94,16 +152,12 @@
             margin-top: 53px;
             overflow: hidden;
             #gifs {
-                width: 80%;
+                display: flex;
+                width: 70%;
                 height: 100%;
                 margin: 0px;
                 overflow: hidden;
-                    img {
-                        //width: 35%;
-                        padding-left: 20px;
-                        height: inherit;
-                        margin: 0rem 14px;
-                    }
+                padding-left: 20rem;
             }
             .arrows {
                 font-style: none;
