--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -33,3 +33,15 @@ a {
     cursor: pointer;
 }
 
+.cover_purple {
+    background: rgba(87, 46, 229, 0.7) !important;
+}
+
+@media (max-width: 840px) {
+    .btn-holder, .icon-holder {
+        display: none;
+        img {
+            display: none;
+        }
+    }
+}
