--- a/css/_modenocday.scss
+++ b/css/_modenocday.scss
@@ -1,5 +1,8 @@
 @media (prefers-color-scheme: dark) {
     body {
+        #crearGif_text {
+            color: white;
+        }
         #searchResult {
             color: white;
         }
@@ -137,9 +140,12 @@
 
         // Light - Theme.
 
+        // ======================================================================== //
 
     body.light-theme {
-        
+        #crearGif_text {
+            color: black;
+        }
         background-color: white;
         #searchResult {
             color: $lightpurplecolor;
