--- a/css/_header.scss
+++ b/css/_header.scss
@@ -71,6 +71,7 @@ header {
         display: none;
         list-style: none;
         flex-flow: column;
+        flex-direction: column;
         margin-top: 90px;
         width: 100%;
         height: 100vh;
@@ -93,11 +94,13 @@ header {
                 color: #9CAFC3;
             }
             &::after {
-                content: '';
-                display: initial;
-                background: grey;
-                width: 100px;
-                height: 5px;
+                display: block;
+                content: "";
+                width: 40px;
+                height: 2px;
+                background-color: #d8d8d8;
+                letter-spacing: 0.5px;
+                margin: 0px 45%;
             }
         }
     }
