--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -97,6 +97,8 @@ header ul {
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+  -ms-flex-direction: column;
+      flex-direction: column;
   margin-top: 90px;
   width: 100%;
   height: 100vh;
@@ -129,11 +131,13 @@ header ul li:active {
 }
 
 header ul li::after {
-  content: '';
-  display: initial;
-  background: grey;
-  width: 100px;
-  height: 5px;
+  display: block;
+  content: "";
+  width: 40px;
+  height: 2px;
+  background-color: #d8d8d8;
+  letter-spacing: 0.5px;
+  margin: 0px 45%;
 }
 
 header input:checked ~ ul {
@@ -590,6 +594,33 @@ nav .navsphere input {
   padding: 0px;
   width: 100%;
   height: inherit;
+}
+
+#container-trending {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#container-trending span {
+  padding: 5px 10px;
+  width: auto;
+  color: #572EE5;
+}
+
+#container-trending span::after {
+  content: ',';
+}
+
+#container-trending span:hover {
+  font-weight: bold;
+  cursor: pointer;
 }
 
 @media (min-width: 940px) {
